# dragonfly

./: .gitignore  .gitmodules  <multiple>  Cargo.toml  Dockerfile  Dockerfile-profiler  HOT_RELOAD.md  README.md  ROADMAP.md  USERSTORIES.md  askama.toml  bootstrap.sh  build.rs  build_agent.sh  dev-livereload.sh  dev.sh  inventory.py.example  k3s.sh  package-lock.json  package.json  sparx.py  spawn_machines.py  tailwind.config.js  talos.sh  values.yaml  workflow.yaml
.archived/: k3s.sh  values.yaml
.archived/inventories/: remote.py
.cursor/rules/: askama.mdc
.sqlx/: query-177d865e66f1a79ff2ae19ba802120ed5f8d5f69dd6389076fdc6bc19bda07dc.json  query-1acfc6aeac4002e281a69aa0be493805c5fb549121b72958ba051f16f0c2c5c1.json  query-1add80bae0d3704525650d8c7d72049590931287d020a70536316883ef14c804.json  query-6031eee034a56bf4ac9d4e36b7c12a7012d96b22907e451e9e1365e838215a5b.json  query-64edf96a9607fbb671b8bc4d05937fceff5d201ddadee814d6b964f0399c8c9b.json  query-cde8dd88145db83032770288b57f94e37a471b72e3d0c7b1ba218e167f78fd9a.json
bootstrap/: deploy.py  k0s.py
crates/dragonfly-agent/: Cargo.toml  Dockerfile
crates/dragonfly-agent/src/: main.rs
crates/dragonfly-common/src/: error.rs  mac_to_words.rs  models.rs
crates/dragonfly-server/: Cargo.toml  askama.toml  build.rs
crates/dragonfly-server/migrations/: 20240329000000_add_deployment_duration.sql
crates/dragonfly-server/src/: api.rs  auth.rs  db.rs  encryption.rs  event_manager.rs  filters.rs  input.css  lib.rs  macos_ui.rs  main.rs  mode.rs  os_templates.rs  status.rs  tinkerbell.rs  ui.rs
crates/dragonfly-server/src/handlers/: machines.rs  mod.rs  proxmox.rs
crates/dragonfly-server/static/: styles.css
crates/dragonfly-server/static/css/: tailwind.css
crates/dragonfly-server/static/js/: gamepad.js
crates/dragonfly-server/static/logos/proxmox/: USAGE.md
crates/dragonfly-server/templates/: base.html  compute.html  error.html  index.html  login.html  machine_details.html  machine_list.html  settings.html  tags.html  welcome.html
crates/dragonfly-server/templates/partials/: _machine_status_badge.html  machine_list_modals.html  status_and_progress.html  workflow_progress.html
dragonfly/: Cargo.toml  README.md  ROADMAP.md  Trunk.toml  build.rs  sqlite.db
dragonfly/crates/dragonfly-agent/: Cargo.toml  Dockerfile
dragonfly/crates/dragonfly-agent/src/: main.rs
dragonfly/crates/dragonfly-common/: Cargo.toml
dragonfly/crates/dragonfly-common/src/: bip39_wordlist.rs  lib.rs  models.rs
dragonfly/crates/dragonfly-server/: Cargo.toml  build.rs
dragonfly/crates/dragonfly-server/src/: api.rs  auth.rs  db.rs  lib.rs  main.rs  settings.html  tinkerbell.rs  ui.rs
dragonfly/crates/dragonfly-server/static/: styles.css
dragonfly/crates/dragonfly-server/templates/: base.html  index.html  machine_details.html  machine_list.html  settings.html
dragonfly/src/: main.rs
dragonfly/templates/: base.html  machine_list.html
inventories/: local.py  remote.py
migrations/: 20230501000000_add_proxmox_tokens.sql  20240329_completed_workflows.sql
os-templates/: ubuntu-2204.yml  ubuntu-2404.yml
src/: main.rs  status.rs
src/cmd/: install.rs  mod.rs  server.rs
tests/: cli_scenario_a.rs
tinkerbell/: hardware-unprovisioned.yaml  template-autoregister.yaml  ubuntu.yaml  workflow-main.yaml  workflow.yaml
tinkerbell/tmp/: run.sh
