[workspace]
members = [
    "crates/dragonfly-common",
    "crates/dragonfly-server",
    "crates/dragonfly-agent",
    "."  # Include the main package
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[package]
name = "dragonfly"
version = "0.1.0"
edition = "2021"
authors = ["Sparx"]
description = "A web application for managing bare metal datacenter infrastructure"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "auth"] }
hyper = { version = "1.1", features = ["server"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

# Kubernetes
k8s-openapi = { version = "0.20", features = ["v1_28"] }
kube = { version = "0.87", features = ["runtime"] }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Security
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = "1.18"
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
dragonfly-server = { path = "crates/dragonfly-server" }

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
walkdir = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
js-sys = "0.3"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
