[package]
name = "dragonfly-server"
version = "0.1.0"
edition = "2021"
authors = ["Sparx"]
description = "API server for Dragonfly bare metal infrastructure management"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros"] }
# Authentication
# Revert axum-login back to stable version
axum-login = { version = "0.17.0" }
axum-extra = "0.10.1"
# Sessions
tower-sessions = { version = "0.14.0" }
# Use sqlx store - trying version 0.15.0 for compatibility
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
async-session = "3.0.0"
async-trait = "0.1.79"
# Password hashing
argon2 = "0.5.2"
# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
# Databases
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "migrate"] }
# Utilities
rand = "0.8.5"
time = "0.3"
uuid = { version = "1.5", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "auth", "fs", "cors"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18"
cookie = "0.18"
bincode = "1.3"
tower-cookies = "0.10.0"

# Networking / DNS
# dns_lookup = "2.0.4" # Removed synchronous resolver
hickory-resolver = { version = "0.24.4", features = ["tokio-runtime"] } # Renamed from trust-dns-resolver

# Local dependencies
dragonfly-common = { path = "../dragonfly-common" }

# Kubernetes integration can be added if needed
kube = { version = "0.87.1", features = ["client", "derive", "runtime"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }

# Artifact download dependencies
reqwest = { version = "0.12.15", features = ["json", "stream"] }
bytes = "1.10.1"
sha2 = "0.10.8"
http-body-util = "0.1.3"
http-body = "1.0.1"