[package]
name = "dragonfly-server"
version = "0.1.0"
edition = "2021"
authors = ["Sparx"]
description = "API server for Dragonfly bare metal infrastructure management"

[dependencies]
# Web Framework
axum = { version = "0.8.3", features = ["macros"] }
# Authentication
axum-login = "0.13.0"
axum-extra = { version = "0.10.0", features = ["cookie"] }
tower-sessions = "0.10.0"
async-session = "3.0.0"
async-trait = "0.1.79"
# Password hashing
argon2 = "0.5.2"
# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
# Databases
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "migrate"] }
# Utilities
rand = "0.8.5"
time = "0.3"
uuid = { version = "1.5", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "auth", "fs", "cors"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18"
cookie = "0.18"
bincode = "1.3"

# Local dependencies
dragonfly-common = { path = "../dragonfly-common" }

# Kubernetes integration can be added if needed 
kube = { version = "0.87.1", features = ["client", "derive", "runtime"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] } 